--- a/05/css/style.css
+++ b/05/css/style.css
@@ -1,19 +1,25 @@
 body {
   color: darkslategray;
-  margin: 1rem 2rem; }
+  margin: 1rem 2rem;
+}
 
 code {
-  color: orangered; }
+  color: orangered;
+}
 
 a {
   color: slateblue;
-  text-decoration: none; }
-  a:hover {
-    color: skyblue;
-    text-decoration: underline; }
+  text-decoration: none;
+}
+
+a:hover {
+  color: skyblue;
+  text-decoration: underline;
+}
 
 .cannot-select {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
-          user-select: none; }
+          user-select: none;
+}
