--- a/07-customizing-bootstrap/src/pug/index.pug
+++ b/07-customizing-bootstrap/src/pug/index.pug
@@ -36,7 +36,7 @@ html(lang="en")
           +link("https://github.com/postcss/postcss-loader") postcss-loader
           | )
         li Generating a separate CSS (with 
-          +link("https://github.com/webpack-contrib/extract-text-webpack-plugin") extract-text-webpack-pugin
+          +link("https://github.com/webpack-contrib/mini-css-extract-plugin") mini-css-extract-plugin
           | )
         li Using 
           +link("http://getbootstrap.com/") Bootstrap
