--- a/01-html+pug/src/pug/index.pug
+++ b/01-html+pug/src/pug/index.pug
@@ -6,9 +6,9 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title Webpack+Bootstrap starter (1)
+    title Webpack+Bootstrap starter: Step 1
   body
-    h1 Webpack+Bootstrap starter (1)
+    h1 Webpack+Bootstrap starter: Step 1
     p Step-by-step projects for Webpack+Bootstrap startup
     ol
       li Genarating HTML (with 
