--- a/04-postcss+autoprefixer/src/pug/index.pug
+++ b/04-postcss+autoprefixer/src/pug/index.pug
@@ -6,9 +6,9 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title Webpack+Bootstrap starter (4)
+    title Webpack+Bootstrap starter: Step 4
   body
-    h1 Webpack+Bootstrap starter (4)
+    h1 Webpack+Bootstrap starter: Step 4
     p Step-by-step projects for Webpack+Bootstrap startup
     ol
       li Genarating HTML (with 
@@ -34,7 +34,7 @@ html(lang="en")
         +link("https://github.com/postcss/postcss-loader") postcss-loader
         | )
 
-    h2#autoprefixer-example Autoprefixer example
+    h2#autoprefixer-example Step 4: Autoprefixer example
     p.cannot-select This paragraph uses 
       code user-select: none;
       |  (you cannot select this line).
