--- a/05-css-extract-text/src/pug/index.pug
+++ b/05-css-extract-text/src/pug/index.pug
@@ -6,9 +6,9 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title Webpack+Bootstrap starter (5)
+    title Webpack+Bootstrap starter: Step 5
   body
-    h1 Webpack+Bootstrap starter (5)
+    h1 Webpack+Bootstrap starter: Step 5
     p Step-by-step projects for Webpack+Bootstrap startup
     ol
       li Genarating HTML (with 
@@ -37,7 +37,7 @@ html(lang="en")
         +link("https://github.com/webpack-contrib/mini-css-extract-plugin") mini-css-extract-plugin
         | )
 
-    h2#autoprefixer-example Autoprefixer example
+    h2#autoprefixer-example Step 4: Autoprefixer example
     p.cannot-select This paragraph uses 
       code user-select: none;
       |  (you cannot select this line).
