--- a/06-using-bootstrap/src/pug/index.pug
+++ b/06-using-bootstrap/src/pug/index.pug
@@ -7,10 +7,10 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title Webpack+Bootstrap starter (6)
+    title Webpack+Bootstrap starter: Step 6
   body
     div.container
-      h1.display-4 Webpack+Bootstrap starter (6)
+      h1.display-4 Webpack+Bootstrap starter: Step 6
       p.lead Step-by-step projects for Webpack+Bootstrap startup
       ol
         li Genarating HTML (with 
@@ -41,13 +41,13 @@ html(lang="en")
         li Using 
           +link("http://getbootstrap.com/") Bootstrap
 
-      h2#autoprefixer-example Autoprefixer example
+      h2#autoprefixer-example Step 4: Autoprefixer example
       p.my-2.cannot-select This paragraph uses 
         code user-select: none;
         |  (you cannot select this line).
       small (Check for CSS output to determine Autoprefixer is working properly)
 
-      h2.mt-4#standard-bootstrap-examples Standard Bootstrap examples
+      h2.mt-4#standard-bootstrap-examples Step 6: Standard Bootstrap examples
       div.dropdown.mt-3
         button.btn.btn-outline-secondary.dropdown-toggle#dropdown-menu-button(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Dropdown example
         div.dropdown-menu(aria-labelledby="dropdown-menu-button")
