--- a/09-using-babel/src/pug/index.pug
+++ b/09-using-babel/src/pug/index.pug
@@ -7,10 +7,10 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title Webpack+Bootstrap starter: Step 8
+    title Webpack+Bootstrap starter: Step 9
   body
     div.container
-      h1.display-4 Webpack+Bootstrap starter: Step 8
+      h1.display-4 Webpack+Bootstrap starter: Step 9
       p.lead Step-by-step projects for Webpack+Bootstrap startup
       ol
         li Genarating HTML (with 
@@ -46,6 +46,8 @@ html(lang="en")
           +link("http://jquery.com/") jQuery
           |  with 
           +link("http://getbootstrap.com/") Bootstrap
+        li Using ES6 syntax and modules with 
+          +link("http://babeljs.io/") Babel
 
       h2#autoprefixer-example Step 4: Autoprefixer example
       p.my-2.cannot-select This paragraph uses 
