--- a/02-injecting-css-style/src/pug/index.pug
+++ b/02-injecting-css-style/src/pug/index.pug
@@ -6,9 +6,9 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title Webpack+Bootstrap starter (2)
+    title Webpack+Bootstrap starter: Step 2
   body
-    h1 Webpack+Bootstrap starter (2)
+    h1 Webpack+Bootstrap starter: Step 2
     p Step-by-step projects for Webpack+Bootstrap startup
     ol
       li Genarating HTML (with 
