--- a/03-using-sass/src/pug/index.pug
+++ b/03-using-sass/src/pug/index.pug
@@ -6,9 +6,9 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    title Webpack+Bootstrap starter (3)
+    title Webpack+Bootstrap starter: Step 3
   body
-    h1 Webpack+Bootstrap starter (3)
+    h1 Webpack+Bootstrap starter: Step 3
     p Step-by-step projects for Webpack+Bootstrap startup
     ol
       li Genarating HTML (with 
