--- a/07-customizing-bootstrap/src/pug/index.pug
+++ b/07-customizing-bootstrap/src/pug/index.pug
@@ -7,10 +7,10 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title Webpack+Bootstrap starter (7)
+    title Webpack+Bootstrap starter: Step 7
   body
     div.container
-      h1.display-4 Webpack+Bootstrap starter (7)
+      h1.display-4 Webpack+Bootstrap starter: Step 7
       p.lead Step-by-step projects for Webpack+Bootstrap startup
       ol
         li Genarating HTML (with 
@@ -43,13 +43,13 @@ html(lang="en")
         li Customizing 
           +link("http://getbootstrap.com/") Bootstrap
 
-      h2#autoprefixer-example Autoprefixer example
+      h2#autoprefixer-example Step 4: Autoprefixer example
       p.my-2.cannot-select This paragraph uses 
         code user-select: none;
         |  (you cannot select this line).
       small (Check for CSS output to determine Autoprefixer is working properly)
 
-      h2.mt-4#standard-bootstrap-examples Standard Bootstrap examples
+      h2.mt-4#standard-bootstrap-examples Step 6: Standard Bootstrap examples
       div.dropdown.mt-3
         button.btn.btn-outline-secondary.dropdown-toggle#dropdown-menu-button(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Dropdown example
         div.dropdown-menu(aria-labelledby="dropdown-menu-button")
@@ -81,7 +81,7 @@ html(lang="en")
               button.btn.btn-secondary(type="button" data-dismiss="modal") Close
               button.btn.btn-primary(type="button") Save changes
 
-      h2.mt-4#customized-bootstrap-examples Customized Bootstrap examples
+      h2.mt-4#customized-bootstrap-examples Step 7: Customized Bootstrap examples
       h5.mt-3#custom-breadcrumb
         +link("https://getbootstrap.com/docs/4.1/components/breadcrumb/#changing-the-separator") Breadcrumb with custom separators
       nav(aria-label="breadcrumb")
